# ainovel

./: .env.bak  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  config.yaml  install.bat  install.sh  install_success.txt  pyproject.toml  requirements.txt  start.bat  start.sh  verify_audit.py  verify_audit_v2.py  verify_backend.py  verify_projects.py
.github/workflows/: ci.yml  release.yml
_deprecated_backup/agent/: __init__.py  config_loader.py  context_manager.py  gemini_client.py  main.py  prompt_manager.py  requirements.txt
_deprecated_backup/agent/pipeline/: stage_0_meta.py  stage_1_master.py  stage_2_volume.py  stage_3_chapter.py  stage_4_content.py  stage_5_polish.py  stage_6_learn.py
_deprecated_backup/web/: app.py
_deprecated_backup/web/static/css/: style.css
_deprecated_backup/web/templates/: settings.html  tools.html
config/: .gitkeep
data/rag_store/chroma_db/: chroma.sqlite3
docs/: QUICKSTART.md
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: AIChatSidebar.jsx  Home.jsx  SearchReplace.jsx  Wizard.jsx
frontend/src/components/layout/: ProjectLayout.jsx  Sidebar.jsx
frontend/src/components/modules/: BatchGenerate.jsx  Dashboard.jsx  Editor.jsx  Export.jsx  Outliner.jsx  Settings.jsx  Statistics.jsx  Worldbook.jsx  WritingStudio.jsx
frontend/src/components/modules/editor/: ChapterList.jsx  ContentEditor.jsx
frontend/src/components/modules/outliner/: StructureEditor.jsx  StructureTree.jsx
frontend/src/components/modules/worldbook/: CardEditor.jsx  CardGrid.jsx
frontend/src/components/ui/: badge.jsx  button.jsx  card.jsx  dialog.jsx  dropdown-menu.jsx  input.jsx  label.jsx  progress.jsx  select.jsx  skeleton.jsx  slider.jsx  switch.jsx  textarea.jsx  toast.jsx
frontend/src/hooks/: use-keyboard-shortcuts.js  use-toast.js
frontend/src/store/: useGenesisStore.js  useProjectStore.js  useThemeStore.js
src/novel_agent/: __init__.py  main.py
src/novel_agent/core/: __init__.py  claude_client.py  config.py  context.py  gemini_client.py  llm_base.py  multi_llm.py  openai_client.py  prompt.py  rag.py
src/novel_agent/pipeline/: __init__.py  chapter_outliner.py  stage_0_meta.py  stage_1_master.py  stage_2_volume.py  stage_3_chapter.py  stage_4_content.py  stage_5_polish.py  stage_6_learn.py  style_analyzer.py
src/novel_agent/prompts/: README.md  __init__.py
src/novel_agent/prompts/learned/: polish_rules.md
src/novel_agent/prompts/stages/: chapter_outline.md  content_write.md  master_outline.md  polish.md  volume_outline.md
src/novel_agent/prompts/stages/content_variants/: action.md  emotional.md  suspense.md
src/novel_agent/prompts/system/: core_rules.md  example_novel_outline.md  writing_style.md
src/novel_agent/utils/: __init__.py  batch.py  batch_structure.py  common.py  content.py  exporter.py  stats.py  structure.py  versioning.py  worldbook.py
src/novel_agent/web/: __init__.py  app.py  state.py
src/novel_agent/web/api/: __init__.py  export.py  generation.py  learning.py  project.py  settings.py  world.py
src/novel_agent/web/static/js/: app.js  tools.js  tools_v2.js  versions.js  worldbook.js
src/novel_agent/web/templates/: base.html  index.html  project.html
tests/: conftest.py  test_core.py  test_pipeline.py  test_utils.py
