[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "novel_agent"
version = "1.0.0"
description = "A semi-automated AI novel generation system based on Gemini"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "yuhong", email = "sysbioyuh@gmail.com"}
]
keywords = ["ai", "novel", "generation", "gemini", "rag"]
dependencies = [
    "google-generativeai>=0.8.0",
    "chromadb>=0.4.0",
    "jinja2>=3.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "flask>=2.0",
    "flask-cors>=3.0"
]

[project.scripts]
novel-agent = "novel_agent.main:main"
novel-web = "novel_agent.web.app:run_server"

[project.urls]
Homepage = "https://github.com/yuhong0304/ainovel"

[tool.setuptools.packages.find]
where = ["src"]
