[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "novel-agent"
version = "1.2.1"
description = "A semi-automated AI novel generation system based on Gemini"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "yuhong", email = "sysbioyuh@gmail.com"}
]
keywords = ["ai", "novel", "generation", "gemini", "rag", "llm", "writing", "creative-writing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: General",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "google-generativeai>=0.8.0",
    "chromadb>=0.4.0",
    "jinja2>=3.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "flask>=2.0",
    "flask-cors>=3.0",
]

[project.optional-dependencies]
# 开发依赖
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "pre-commit>=3.0",
    "build>=1.0",
    "twine>=4.0",
]

# 导出功能依赖
export = [
    "python-docx>=1.0",
    "ebooklib>=0.18",
]

# 多模型支持
openai = [
    "openai>=1.0",
    "tiktoken>=0.5",
]

claude = [
    "anthropic>=0.18",
]

# 所有额外功能
all = [
    "novel-agent[export]",
    "novel-agent[openai]",
    "novel-agent[claude]",
]

# 完整安装（包含开发依赖）
full = [
    "novel-agent[all]",
    "novel-agent[dev]",
]

[project.scripts]
novel-agent = "novel_agent.main:main"
novel-web = "novel_agent.web.app:run_server"

[project.urls]
Homepage = "https://github.com/yuhong0304/ainovel"
Documentation = "https://github.com/yuhong0304/ainovel#readme"
Repository = "https://github.com/yuhong0304/ainovel"
Issues = "https://github.com/yuhong0304/ainovel/issues"
Changelog = "https://github.com/yuhong0304/ainovel/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
novel_agent = [
    "prompts/**/*.md",
    "web/templates/*.html",
    "web/static/**/*",
]

# Ruff 配置 (代码检查和格式化)
[tool.ruff]
target-version = "py39"
line-length = 120
select = [
    "F",   # Pyflakes (critical errors only)
]
ignore = [
    "E501",  # line too long
    "E722",  # bare except
    "W293",  # blank line contains whitespace
    "W291",  # trailing whitespace
    "W292",  # no newline at end of file
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "E402",  # module level import not at top of file
    "F401",  # unused import
    "F403",  # star imports
    "F405",  # may be undefined from star import
    "F841",  # local variable assigned but never used
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403", "F405"]
"*.py" = ["E", "W"]  # Ignore all style issues

[tool.ruff.isort]
known-first-party = ["novel_agent"]

# Mypy 配置 (类型检查)
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/", "_deprecated_backup/", "build/", "dist/"]

# Pytest 配置
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

# Coverage 配置
[tool.coverage.run]
source = ["src/novel_agent"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "except ImportError",
]
